# artgg

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md
.github/assets/: demo.tape
.github/workflows/: db-release.yml  test.yml
cleaning/: MASTER_DB_LAYOUT.md  MetObjects.csv  analyze_met_objects.py  enrich_images.py  filtered_objects.csv  image_cache.db
migrations/: V1__initial_schema.sql  V2__artists.sql
scripts/: README.md  build_db.py  build_master_dbs.py  pyproject.toml  requirements.txt  schema.sql
src/: app.rs  build.rs  collection.rs  db.rs  main.rs  renderer.rs  ui.rs
