[package]
name = "artgg"
version = "0.1.0"
edition = "2021"
description = "Generate desktop wallpapers from classical artwork with museum-style placards"
repository = "https://github.com/nickbrodeur/artgg"
license = "MIT"

rust-version = "1.70"

[[bin]]
name = "artgg"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
