[package]
name = "artgg"
version = "0.1.0"
edition = "2021"
description = "Generate desktop wallpapers from classical artwork with museum-style placards"
repository = "https://github.com/nickbrodeur/artgg"
license = "MIT"

rust-version = "1.70"

[[bin]]
name = "artgg"
path = "src/main.rs"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
fontdue = "0.9"

# HTTP for downloading artwork images
reqwest = { version = "0.11", features = ["blocking", "json"] }

# JSON for Met API responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
